Fix name font size on mobile on badger profile

--- a/site/pages/badger-profile/style.css
+++ b/site/pages/badger-profile/style.css
@@ -8,8 +8,9 @@
 }
 
 .header {
-  composes: fontM from "../../css/typography/_fonts.css";
   composes: serif from "../../css/typography/_fonts.css";
+  font-size: 40px;
+  line-height: 1.1;
   margin-bottom: 5px;
 }
 
